--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Three JS Demo</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<canvas id="bg"></canvas>
-    <div id="app"></div>
-    <script type="module" src="./main.js"></script>
-  </body>
+  <canvas id="bg"></canvas>
+  <div id="app"></div>
+  <script type="module" src="./main.js"></script> 
+</body>
 </html>
