--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Three JS Demo</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <canvas id="bg"></canvas>
-  <div id="app"></div>
-  <script type="module" src="./main.js"></script> 
-</body>
+<html>
+    <head>
+        <title>Three JS Demo</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" type="text/css" href="./style.css" />
+
+    </head>
+    <body>
+<h1>SHOUT OUT! AM I PUBLISHING ANYTHING???</h1>
+        <canvas id="bg"></canvas>
+        <script type="module" src="main.js"></script>
+    </body>
 </html>
