--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
     </head>
     <body>
-<h1>SHOUT OUT! AM I PUBLISHING ANYTHING???</h1>
         <canvas id="bg"></canvas>
-        <script type="module" src="main.js"></script>
+        <script type="module" src="/src/main.js"></script>
     </body>
 </html>
